Fixed issue with icon alignment in masthead buttons, which also prevents text from dropping to next line as the window gets smaller

--- a/src/_blocks/masthead/_masthead.scss
+++ b/src/_blocks/masthead/_masthead.scss
@@ -118,6 +118,13 @@ body {
 				}
 			}
 		}
+
+		li:not(.masthead__navicon) {
+			& > a,
+			& > button {
+				display: flex;
+			}
+		}
 	}
 
 	// Modifiers
